# Autonomous-warehouse-mobile-robot

./: README.md
ESP32 Code/final/: final.ino
awmr_autonomous/: package.xml  setup.cfg  setup.py
awmr_autonomous/awmr_autonomous/: cmd_vel_to_motor.py  mapper.py
awmr_autonomous/config/: ekf.yaml  nav2_params.yaml  slam.yaml
grad_prot_modified/: grad_prot_modified - CADCAM Bottom Copper.GBR  grad_prot_modified - CADCAM Drill.DRL  grad_prot_modified - CADCAM Drill.GBR  grad_prot_modified - CADCAM Mechanical 1.GBR  grad_prot_modified - CADCAM Netlist.IPC  grad_prot_modified - CADCAM Profile.GBR  grad_prot_modified - CADCAM READ-ME.TXT  grad_prot_modified - CADCAM Top Assembly.GBR  grad_prot_modified - CADCAM Top Copper.GBR  grad_prot_modified - CADCAM Top Silk Screen.GBR  grad_prot_modified - CADCAM Top Solder Resist.GBR  grad_prot_modified.pdsprj  grad_prot_modified.pdsprj.LAPTOP-KQEALH1H.Ahmed Ehab.workspace
grad_prot_modified/Project Backups/: grad_prot_modified [20260115, 23-40-04].pdsprj  grad_prot_modified [20260117, 10-52-56].pdsprj  grad_prot_modified [Autosaved].pdsprj
robot/: CMakeLists.txt  package.xml
robot/config/: amcl.yaml  ekf.yaml  joint_names_robot.yaml  nav2_params.yaml
robot/launch/: complete.launch.py  display.launch.py  gazebo.launch.py  localization.launch.py  slam.launch.py
robot/meshes/: base_link.STL  laser.STL  link_ML.STL  link_MR.STL
robot/scripts/: tf_broadcaster.py
robot/urdf/: robot.csv  robot.urdf
